[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/TreeObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Environmental/Plants/Trees/ash.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/InteractableObject.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Particles/WateredDripEffect.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="TreeObject" instance=ExtResource( 3 )]
visible = false
collision_layer = 15506
collision_mask = 15506
script = ExtResource( 1 )

[node name="Area2DShade" type="Area2D" parent="." index="2"]
visible = false
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DShade" index="0"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2DShade" index="1"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Area2DPlant" type="Area2D" parent="." index="3"]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlant" index="0"]
position = Vector2( 8, 8 )
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="Area2DInteractable" index="0"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="SpriteShadow" type="Sprite" parent="." index="6"]
centered = false
offset = Vector2( -16, -32 )
hframes = 3
vframes = 2

[node name="CollisionShape2DObstruction" parent="." index="7"]
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[node name="RayCast2DGrowth" type="RayCast2D" parent="." index="10"]
visible = false
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collision_mask = 128

[node name="WateredEffect" parent="." index="11" instance=ExtResource( 4 )]
position = Vector2( 9, 6 )

[node name="Sprite" parent="." index="12"]
texture = ExtResource( 2 )
offset = Vector2( -16, -32 )
hframes = 3
vframes = 2

[connection signal="area_entered" from="Area2DShade" to="." method="_on_Area2DShade_entered"]
[connection signal="area_exited" from="Area2DShade" to="." method="_on_Area2DShade_exited"]
